@@ -21,6 +21,7 @@ import dev.latvian.mods.kubejs.server.KubeJSServerEventHandler;
 import dev.latvian.mods.kubejs.util.KubeJSPlugins;
 import dev.latvian.mods.kubejs.util.UtilsJS;
 import dev.latvian.mods.kubejs.world.KubeJSWorldEventHandler;
+import dev.latvian.mods.kubejs.world.gen.KJSFlatLevelSource;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.CreativeModeTab;
 import net.minecraft.world.item.ItemStack;
@@ -32,8 +33,6 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.ArrayList;
-import java.util.List;
 import java.util.Locale;
 
 /**
@@ -61,25 +60,24 @@ public class KubeJS {
 		Locale.setDefault(Locale.US);
 
 		if (Files.notExists(KubeJSPaths.README)) {
-			UtilsJS.tryIO(() -> {
-				List<String> list = new ArrayList<>();
-				list.add("Find more info on the website: https://kubejs.com/");
-				list.add("");
-				list.add("Directory information:");
-				list.add("");
-				list.add("assets - Acts as a resource pack, you can put any client resources in here, like textures, models, etc. Example: assets/kubejs/textures/item/test_item.png");
-				list.add("data - Acts as a datapack, you can put any server resources in here, like loot tables, functions, etc. Example: data/kubejs/loot_tables/blocks/test_block.json");
-				list.add("");
-				list.add("startup_scripts - Scripts that get loaded once during game startup - Used for adding items and other things that can only happen while the game is loading (Can be reloaded with /kubejs reload_startup_scripts, but it may not work!)");
-				list.add("server_scripts - Scripts that get loaded every time server resources reload - Used for modifying recipes, tags, loot tables, and handling server events (Can be reloaded with /reload)");
-				list.add("client_scripts - Scripts that get loaded every time client resources reload - Used for JEI events, tooltips and other client side things (Can be reloaded with F3+T)");
-				list.add("");
-				list.add("config - KubeJS config storage. This is also the only directory that scripts can access other than world directory");
-				list.add("exported - Data dumps like texture atlases end up here");
-				list.add("");
-				list.add("You can find type-specific logs in logs/kubejs/ directory");
-				Files.write(KubeJSPaths.README, list);
-			});
+			UtilsJS.tryIO(() -> Files.writeString(KubeJSPaths.README,
+					"""
+							Find more info on the website: https://kubejs.com/
+											
+							Directory information:
+											
+							assets - Acts as a resource pack, you can put any client resources in here, like textures, models, etc. Example: assets/kubejs/textures/item/test_item.png
+							data - Acts as a datapack, you can put any server resources in here, like loot tables, functions, etc. Example: data/kubejs/loot_tables/blocks/test_block.json
+											
+							startup_scripts - Scripts that get loaded once during game startup - Used for adding items and other things that can only happen while the game is loading (Can be reloaded with /kubejs reload_startup_scripts, but it may not work!)
+							server_scripts - Scripts that get loaded every time server resources reload - Used for modifying recipes, tags, loot tables, and handling server events (Can be reloaded with /reload)
+							client_scripts - Scripts that get loaded every time client resources reload - Used for JEI events, tooltips and other client side things (Can be reloaded with F3+T)
+											
+							config - KubeJS config storage. This is also the only directory that scripts can access other than world directory
+							exported - Data dumps like texture atlases end up here
+											
+							You can find type-specific logs in logs/kubejs/ directory
+							""".trim()));
 		}
 
 		PROXY = EnvExecutor.getEnvSpecific(() -> KubeJSClient::new, () -> KubeJSCommon::new);
@@ -99,12 +97,6 @@ public class KubeJS {
 
 		startupScriptManager = new ScriptManager(ScriptType.STARTUP, KubeJSPaths.STARTUP_SCRIPTS, "/data/kubejs/example_startup_script.js");
 		clientScriptManager = new ScriptManager(ScriptType.CLIENT, KubeJSPaths.CLIENT_SCRIPTS, "/data/kubejs/example_client_script.js");
-
-		Path oldStartupFolder = KubeJSPaths.DIRECTORY.resolve("startup");
-
-		if (Files.exists(oldStartupFolder)) {
-			UtilsJS.tryIO(() -> Files.move(oldStartupFolder, KubeJSPaths.STARTUP_SCRIPTS));
-		}
 
 		KubeJSPlugins.forEachPlugin(KubeJSPlugin::init);
 
@@ -171,8 +163,7 @@ public class KubeJS {
 		UtilsJS.init();
 		KubeJSNet.init();
 		new StartupEventJS().post(ScriptType.STARTUP, KubeJSEvents.INIT);
-		// FIXME: Registry.register(Registry.CHUNK_GENERATOR, new ResourceLocation(KubeJS.MOD_ID, "flat"), FlatChunkGeneratorKJS.CODEC);
-		//KubeJSRegistries.chunkGenerators().register(new ResourceLocation(KubeJS.MOD_ID, "flat"), () -> FlatChunkGeneratorKJS.CODEC);
+		KubeJSRegistries.chunkGenerators().register(new ResourceLocation(KubeJS.MOD_ID, "flat"), () -> KJSFlatLevelSource.CODEC);
 	}
 
 	public void loadComplete() {
